--- a/views/About.html
+++ b/views/About.html
@@ -424,6 +424,10 @@
             padding: 0 20px;
         }
     }
+    body {
+        margin: 0;
+        padding: 0;
+    }
 </style>
 <main class="studio-container">
     <section class="hero-section">
@@ -431,11 +435,11 @@
             <div class="header-content">
                 <div class="logo">AITU MEDIA STUDIO</div>
                 <nav class="navigation">
-                    <button class="nav-link">ПРОЕКТЫ</button>
-                    <button class="nav-link">СТУДИЯ</button>
-                    <button class="nav-link">О НАС</button>
-                    <button class="nav-link">КОНТАКТЫ</button>
-                    <button class="booking_nav">ЗАЯВКА</button>
+                    <button class="nav-link"><a href="/projects"style="text-decoration:none;color: #9a9a9a">ПРОЕКТЫ</a></button>
+                    <button class="nav-link"><a href="/overview"style="text-decoration:none;color: #9a9a9a">СТУДИЯ</a></button>
+                    <button class="nav-link"><a href="/about"style="text-decoration:none;color: #9a9a9a">О НАС</a></button>
+                    <button class="nav-link"><a href="/contacts"style="text-decoration:none;color: #9a9a9a">КОНТАКТЫ</a></button>
+                    <button class="booking_nav"><a href="/booking" style="text-decoration:none;color: #9a9a9a">ЗАЯВКА </a></button>
                 </nav>
             </div>
         </header>
@@ -490,6 +494,7 @@
     </section>
     </section>
 </main>
+<script src="../server.js"></script>
 <script>
     var slideIndex = 1;
     showDivs(slideIndex);
